# ICM20648-BNO055-OP3

./: Proposal_RG_Robotics 2025_Rev_02.docx  README.md  Sistem Kunci Pintu Ruang Berbasis Pengenalan Wajah rev1.pptx
Arduino/project/: Makefile  main.cpp
Data Imu Op3/: Doc1.docx
Data Imu Op3/Imu bno/imu_bno_lurus/: log_lurus_[Jumat_03-10-2025_22-51-41].txt
Data Imu Op3/Imu bno/imu_bno_rotate/: log_rotate_[Jumat_03-10-2025_22-55-22].txt
Data Imu Op3/Imu bno/imu_bno_side/: log_side_[Jumat_03-10-2025_22-53-14].txt
Data Imu Op3/Open Cr/imu_balance_lurus/: walking_log_lurus_[Jumat_03-10-2025_22-45-11].txt
Data Imu Op3/Open Cr/imu_balance_rotate/: walking_log_rotate_[Jumat_03-10-2025_22-48-24].txt
Data Imu Op3/Open Cr/imu_balance_side/: walking_log_side_[Jumat_03-10-2025_22-46-41].txt
catkin_ws/: gui.sh
catkin_ws/MYROBOT_control/: CMakeLists.txt  package.xml
catkin_ws/devel_isolated/bno055_imu/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel_isolated/comms/: .catkin  .rosinstall  setup.sh
catkin_ws/devel_isolated/dynamixel_sdk/: .catkin  .rosinstall  (+2 more)
catkin_ws/src/: Notes.txt
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/: CMakeLists.txt  jalan.sh
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/include/op3_demo/: move_forwart.h  move_forwart_ball_follower.h  move_forwart_ball_tracker.h  move_forwart_rotate.h  move_forwart_rotate_ball_follower.h  move_forwart_rotate_ball_tracker.h  move_forwart_side.h  move_forwart_side_ball_follower.h  move_forwart_side_ball_tracker.h  op_demo.h
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/launch/: demo.launch
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/: demo_node.cpp
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/LOG_ROS/imu_balance_lurus/: walking_log_lurus_[Kamis_16-10-2025_02-30-09].txt  walking_log_lurus_[Kamis_16-10-2025_02-42-34].txt  walking_log_lurus_[Rabu_15-10-2025_04-07-57].txt
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/LOG_ROS/imu_balance_side/: walking_log_side_[Jumat_17-10-2025_00-22-31].txt  walking_log_side_[Jumat_17-10-2025_00-24-23].txt  walking_log_side_[Jumat_17-10-2025_00-24-55].txt  walking_log_side_[Jumat_17-10-2025_00-26-41].txt  walking_log_side_[Jumat_17-10-2025_00-27-54].txt  walking_log_side_[Jumat_17-10-2025_00-28-26].txt  walking_log_side_[Jumat_17-10-2025_00-28-27].txt  walking_log_side_[Jumat_17-10-2025_00-29-34].txt
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/LOG_ROS/imu_bno_lurus/: log_lurus_[Kamis_16-10-2025_02-30-09].txt  log_lurus_[Kamis_16-10-2025_02-42-34].txt  log_lurus_[Rabu_15-10-2025_04-07-56].txt
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/LOG_ROS/imu_bno_side/: log_side_[Jumat_17-10-2025_00-08-46].txt  log_side_[Jumat_17-10-2025_00-09-17].txt  log_side_[Jumat_17-10-2025_00-09-18].txt  log_side_[Jumat_17-10-2025_00-09-19].txt  log_side_[Jumat_17-10-2025_00-09-20].txt  log_side_[Jumat_17-10-2025_00-09-21].txt  log_side_[Jumat_17-10-2025_00-09-22].txt  log_side_[Jumat_17-10-2025_00-09-23].txt  log_side_[Jumat_17-10-2025_00-09-24].txt  log_side_[Jumat_17-10-2025_00-09-25].txt  log_side_[Jumat_17-10-2025_00-09-26].txt  log_side_[Jumat_17-10-2025_00-09-27].txt  log_side_[Jumat_17-10-2025_00-09-28].txt  log_side_[Jumat_17-10-2025_00-09-29].txt  log_side_[Jumat_17-10-2025_00-09-30].txt  log_side_[Jumat_17-10-2025_00-09-31].txt  log_side_[Jumat_17-10-2025_00-09-32].txt  log_side_[Jumat_17-10-2025_00-09-33].txt  log_side_[Jumat_17-10-2025_00-09-34].txt  log_side_[Jumat_17-10-2025_00-09-35].txt  log_side_[Jumat_17-10-2025_00-09-36].txt  log_side_[Jumat_17-10-2025_00-09-37].txt  log_side_[Jumat_17-10-2025_00-09-38].txt  log_side_[Jumat_17-10-2025_00-09-39].txt  log_side_[Jumat_17-10-2025_00-09-40].txt  log_side_[Jumat_17-10-2025_00-09-41].txt  log_side_[Jumat_17-10-2025_00-09-42].txt  log_side_[Jumat_17-10-2025_00-09-43].txt  log_side_[Jumat_17-10-2025_00-09-44].txt  log_side_[Jumat_17-10-2025_00-09-45].txt  log_side_[Jumat_17-10-2025_00-09-46].txt  log_side_[Jumat_17-10-2025_00-09-47].txt  log_side_[Jumat_17-10-2025_00-09-48].txt  log_side_[Jumat_17-10-2025_00-09-49].txt  log_side_[Jumat_17-10-2025_00-09-50].txt  log_side_[Jumat_17-10-2025_00-09-51].txt  log_side_[Jumat_17-10-2025_00-09-52].txt  log_side_[Jumat_17-10-2025_00-09-53].txt  log_side_[Jumat_17-10-2025_00-09-54].txt  log_side_[Jumat_17-10-2025_00-09-55].txt  (+754 more)
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/LOG_ROS/imu_open_cr_lurus/: log_lurus_[Kamis_16-10-2025_02-30-09].txt  log_lurus_[Kamis_16-10-2025_02-42-34].txt  log_lurus_[Rabu_15-10-2025_04-07-56].txt
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/LOG_ROS/imu_open_cr_side/: log_side_[Jumat_17-10-2025_00-08-46].txt  log_side_[Jumat_17-10-2025_00-15-55].txt  log_side_[Jumat_17-10-2025_00-16-43].txt  log_side_[Jumat_17-10-2025_00-17-26].txt  log_side_[Jumat_17-10-2025_00-18-57].txt  log_side_[Jumat_17-10-2025_00-19-36].txt  log_side_[Jumat_17-10-2025_00-22-31].txt  log_side_[Jumat_17-10-2025_00-24-22].txt  log_side_[Jumat_17-10-2025_00-24-55].txt  log_side_[Jumat_17-10-2025_00-25-26].txt  log_side_[Jumat_17-10-2025_00-26-10].txt  log_side_[Jumat_17-10-2025_00-26-41].txt  log_side_[Jumat_17-10-2025_00-27-53].txt  log_side_[Jumat_17-10-2025_00-28-26].txt  log_side_[Jumat_17-10-2025_00-29-34].txt
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/move_forwart/: move_forwart.cpp  move_forwart_ball_follower.cpp  move_forwart_ball_tracker.cpp
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/move_forwart_rotate/: move_forwart_rotate.cpp  move_forwart_rotate_ball_follower.cpp  move_forwart_rotate_ball_tracker.cpp
catkin_ws/src/ROBOTIS-OP3-Demo/op3_demo/src/move_forwart_side/: move_forwart_side.cpp  move_forwart_side_ball_follower.cpp  move_forwart_side_ball_tracker.cpp
catkin_ws/src/ROBOTIS-OP3/bno055_imu/: CMakeLists.txt  package.xml
catkin_ws/src/ROBOTIS-OP3/bno055_imu/include/bno055_imu/: bno055_imu.h
catkin_ws/src/ROBOTIS-OP3/bno055_imu/launch/: bno055_imu.launch  bno055_imu.launch.save
catkin_ws/src/ROBOTIS-OP3/bno055_imu/src/bno055_imu_node/: bno055_imu.cpp  bno055_imu_node.cpp
catkin_ws/src/utils/: CMakeLists.txt  package.xml
catkin_ws/src/utils/srv/: GetVisionDev.srv
(+494 files in other folders)
